Added setTimeout for better startup

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -244,6 +244,7 @@ html
 
     script.
       document.addEventListener('DOMContentLoaded', function handleReady () {
+      setTimeout(function waitForImagesToLoad () {
         // Simplifiy domo reference
         var D = window.domo;
 
@@ -442,4 +443,5 @@ html
           // End our performance check
           console.timeEnd('bulkUpdateSelection');
         }
+      }, 500);
       });
