--- a/lib/index.jade
+++ b/lib/index.jade
@@ -412,7 +412,7 @@ html
               D.THEAD([
                 D.TR([
                   // TODO: Add collapse support like in `gemini-gui`
-                  D.TH({colspan: 3}, D.B(imageSetInfo.humanName))
+                  D.TH({colspan: 3}, imageSetInfo.humanName)
                 ]),
                 D.TR([
                   // TODO: Move style out of inline and to classes for more performance
