--- a/lib/index.jade
+++ b/lib/index.jade
@@ -436,6 +436,8 @@ html
                     D.INPUT({type: 'checkbox', checked: true})
                   ]),
                   D.TD({style: 'vertical-align: top;'}, [refImgClone]),
+                  // TODO: Consider adding updated diff image here or placing overlay or muting non-overlay section
+                  //   It's hard to see the changes as is but maybe the overlay selection will make it more obvious
                   D.TD({style: 'vertical-align: top;'}, [canvasEl])
                 ])
               ])
