--- a/lib/index.jade
+++ b/lib/index.jade
@@ -289,7 +289,7 @@ html
               humanName: imageSetEl.getAttribute('data-image-set')
             };
             if (imageSetEl === expectedImgSetEl) {
-              retVal.humanName += ' (current suite)';
+              retVal.humanName += ' (current set)';
             }
             return retVal;
           });
