--- a/lib/index.jade
+++ b/lib/index.jade
@@ -241,6 +241,38 @@ html
           // Run acceptance function
           acceptImageSetChanges(base64Data, imgSetId);
         });
+
+        $('body').on('click', 'button[data-action="update-similar-images"]', function handleClick (evt) {
+          // Find our image set container
+          var btnEl = evt.target;
+          var $imgSet = $(btnEl).closest('[data-image-set]');
+          //- assert.strictEqual($imgSet.length, 1);
+
+          // Find our similar image sets
+          var $similarImageSets = $imgSet.find('[data-similar-image-set]');
+          //- assert.strictEqual($currentImg.length, 1);
+
+          // For each of our similar image sets
+          $similarImageSets.each(function updateImageSet (i, similarImageSetEl) {
+            // Move back to jQuery collection
+            var $similarImageSet = $(similarImageSetEl);
+            var similarImgSetId = $similarImageSet.data('similar-image-set');
+
+            // If the image set wasn't selected, then return
+            if ($similarImageSet.find('[name=save_update]').prop('checked') !== true) {
+              return;
+            }
+
+            // Extract updated base64 content
+            var $updatedRefCanvas = $similarImageSet.find('.updated-ref');
+            //- assert.strictEqual($updatedRefCanvas.length, 1);
+            var base64Data = $updatedRefCanvas[0].toDataURL('image/png');
+
+            // Run acceptance function
+            //- updateImageSetChanges(base64Data, similarImgSetId);
+            console.log(base64Data, similarImgSetId);
+          });
+        });
       });
 
     script.
@@ -286,6 +318,7 @@ html
               currentImg: imageSetEl.querySelector('[data-compare-type=current]'),
               diffImg: imageSetEl.querySelector('[data-compare-type=diff]'),
               refImg: imageSetEl.querySelector('[data-compare-type=ref]'),
+              id: imageSetEl.getAttribute('data-image-set'),
               humanName: imageSetEl.getAttribute('data-image-set')
             };
             if (imageSetEl === expectedImgSetEl) {
@@ -383,7 +416,7 @@ html
 
             // Create a canvas
             // https://github.com/scijs/get-pixels/blob/7c447cd979637b31e47e148f238a1e71611af481/dom-pixels.js#L14-L18
-            var canvasEl = document.createElement('canvas');
+            var canvasEl = D.CANVAS({class: 'updated-ref'});
             canvasEl.width = refImg.naturalWidth;
             canvasEl.height = refImg.naturalHeight;
             var context = canvasEl.getContext('2d');
@@ -414,7 +447,10 @@ html
             // Generate and append result content
             // DEV: We use a document fragment to avoid `n` DOM edits -- instead it's 1
             // DEV: Tables will all use same width due to heuristics
-            var resultGroupEl = D.TABLE({class: 'table'}, [
+            var resultGroupEl = D.TABLE({
+              class: 'table',
+              'data-similar-image-set': imageSetInfo.id
+            }, [
               D.THEAD([
                 D.TR([
                   // TODO: Add collapse support like in `gemini-gui`
@@ -433,7 +469,7 @@ html
                   D.TD({
                     style: 'vertical-align: top;'
                   }, [
-                    D.INPUT({type: 'checkbox', checked: true})
+                    D.INPUT({name: 'save_update', type: 'checkbox', checked: true})
                   ]),
                   D.TD({style: 'vertical-align: top;'}, [refImgClone]),
                   // TODO: Consider adding updated diff image here or placing overlay or muting non-overlay section
