Checked off another TODO

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -45,7 +45,7 @@ html
     //- [x] TODO: Next: Add automatic image matching
     //- [x] TODO: Next: Add image acceptance support for matched images
     //- [x] TODO: Next: Filter out unselected matched images
-    //- [ ] TODO: Next: Move to button triggered image matching (i.e. clicking button uses preloaded overlay data but will generate results)
+    //- [x] TODO: Next: Move to button triggered image matching (i.e. clicking button uses preloaded overlay data but will generate results)
     //- [ ] TODO: Next: Add click/drag overlay support
     //- [ ] TODO: Next: Add result update (i.e. pass/fail) if we still lack it
 
