--- a/lib/index.jade
+++ b/lib/index.jade
@@ -70,6 +70,9 @@ html
     //- [x] TODO: Next: Filter out unselected matched images
     //- [x] TODO: Next: Move to button triggered image matching (i.e. clicking button uses preloaded overlay data but will generate results)
     //- [ ] TODO: Next: Add click/drag overlay support
+    //-    Mostly done, want to fix up expands to only expand bad images
+    //-    Then highlight new overlay area better in "Similar images"
+    //-    Then remove "Similar images" when we update it
     //- [ ] TODO: Next: Add result update (i.e. pass/fail) if we still lack it
 
     //- Setup our overlay definition
